--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,6 @@
                     <div>
                         <div class="flex justify-between mb-3 ml-1">
                             <label class="block text-xs uppercase tracking-widest text-gray-400 font-bold">Password</label>
-                            <a href="#" class="text-xs text-blue-400 hover:text-white transition">Forgot Password?</a>
                         </div>
                         <input type="password" name="password" placeholder="••••••••" required
                                class="w-full px-6 py-4 bg-white/5 border border-white/10 rounded-2xl focus:ring-2 focus:ring-blue-500 transition-all outline-none text-white placeholder:text-gray-600">
@@ -54,7 +53,12 @@
                     <button type="submit" class="w-full py-5 bg-blue-600 hover:bg-blue-500 rounded-2xl font-bold text-xl shadow-lg shadow-blue-500/20 transition-all transform hover:-translate-y-1 active:scale-[0.98]">
                         Sign In
                     </button>
+
+                    <div class="text-center mt-6">
+                        <a href="#" class="inline-block text-ms text-blue-400 hover:text-white transition">Forgot Password?</a>
+                    </div>
                 </form>
+
 
                 <form th:action="@{/register}" method="post" class="space-y-4" x-show="!isLogin" x-cloak style="display: none;">
                     <div class="grid grid-cols-2 gap-4">
